Fix default color issue for buttons on iPhones

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,6 +68,7 @@ body {
 .btn {
   font-size: 2.4rem;
   font-weight: 700;
+  color: inherit;
 
   flex: 1;
   padding: 2rem;
